# AI_Projects

./: .gitignore  ARCHITECTURE_GUIDE.md  README.md  main.py  postman_collection.json  pyproject.toml  requirement.txt  start_qdrant.sh
AI_Coursera/: 2a_emotion_detection  2a_emotion_detection.py  3b_formatted_output_test.py  4b_packaging_test.py  4b_packaging_test.txt  5a_unit_testing  5b_unit_testing_result  7b_error_handling_server.py  8a_server_modified  emotion_detection.py  server.py
AI_Coursera/EmotionDetection/: emotion_detection.py
AI_Coursera/static/: mywebscript.js
AI_Coursera/templates/: index.html
src/: app.py  config.py  database.py
src/llms/: __init__.py  llm_factory.py
src/models/: chat.py  document.py  user.py
src/services/: auth.py  minio_service.py  vector_store.py
tests/: test_rag.py
