[project]
name = "auditchatbotapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "flashrank>=0.2.10",
    "ipykernel>=7.3.0",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-qdrant>=1.1.0",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
